@@ -1,0 +1,35 @@
+/*
+   +----------------------------------------------------------------------+
+   | PHP Version 4                                                        |
+   +----------------------------------------------------------------------+
+   | Copyright (c) 1997-2003 The PHP Group                                |
+   +----------------------------------------------------------------------+
+   | This source file is subject to version 3.0 of the PHP license,       |
+   | that is bundled with this package in the file LICENSE, and is        |
+   | available through the world-wide-web at the following url:           |
+   | http://www.php.net/license/3_0.txt.                                  |
+   | If you did not receive a copy of the PHP license and are unable to   |
+   | obtain it through the world-wide-web, please send a note to          |
+   | license@php.net so we can mail you a copy immediately.               |
+   +----------------------------------------------------------------------+
+   | Authors: Sara Golemon <pollita@php.net>                              |
+   +----------------------------------------------------------------------+
+*/
+
+/* $Id: http.h,v 1.1 2003/09/06 00:35:21 pollita Exp $ */
+
+#ifndef PHP_HTTP_H
+#define PHP_HTTP_H
+
+#include "php.h"
+#include "php_smart_str.h"
+
+PHPAPI int php_url_encode_hash_ex(HashTable *ht, smart_str *formstr,
+				const char *num_prefix, int num_prefix_len,
+				const char *key_prefix, int key_prefix_len,
+				const char *key_suffix, int key_suffix_len TSRMLS_DC);
+#define php_url_encode_hash(ht, formstr)	php_url_encode_hash_ex((ht), (formstr), NULL, 0, NULL, 0, NULL, 0 TSRMLS_CC)
+
+PHP_FUNCTION(http_build_query);
+
+#endif
